--- a/enlaces.html
+++ b/enlaces.html
@@ -29,18 +29,54 @@
       background: #fff;
     }
 
-    .header {
-      background: rgba(255, 255, 255, 0.98);
+    /* =========================
+       HEADER LIGHT (override seguro)
+       ========================= */
+    .header.header--light{
+      background: rgba(255,255,255,0.98) !important;
       backdrop-filter: blur(10px);
-      border-bottom: 1px solid var(--border-subtle);
-      padding: 1.2rem 0;
+      border-bottom: 1px solid var(--border-subtle) !important;
+    }
+    .header.header--light .nav a{
+      color: var(--navy-deep) !important;
+    }
+    .header.header--light .nav a:hover{
+      background: rgba(15,42,68,0.06) !important;
+    }
+    .header.header--light .nav a[aria-current="page"]{
+      background: rgba(15,42,68,0.10) !important;
+    }
+    .header.header--light .btn-nav{
+      color: var(--navy-deep) !important;
+      border-color: rgba(201,169,97,0.85) !important;
+      background: transparent !important;
+    }
+    .header.header--light .btn-nav:hover{
+      background: rgba(201,169,97,0.12) !important;
+      border-color: rgba(201,169,97,1) !important;
+    }
+    .header.header--light .hamburger{
+      background: rgba(15,42,68,0.06) !important;
+      border: 1px solid rgba(15,42,68,0.12) !important;
+      color: var(--navy-deep) !important;
+    }
+
+    @media (max-width: 760px){
+      .header.header--light .nav.mobile-open{
+        background:#fff !important;
+        border:1px solid var(--border-subtle) !important;
+        box-shadow: 0 14px 40px rgba(15,42,68,0.15) !important;
+      }
+      .header.header--light .nav.mobile-open a{
+        color: var(--navy-deep) !important;
+      }
     }
 
     /* Hero */
     .page-hero {
       background: linear-gradient(135deg, #0F2A44 0%, #1A3A5C 100%);
       color: #fff;
-      padding: 4rem 0 3rem;
+      padding: calc(3.8rem + 95px) 0 2.6rem; /* ✅ compensa header fijo */
       text-align: center;
       border-bottom: 1px solid rgba(255,255,255,0.1);
     }
@@ -51,19 +87,22 @@
       font-weight: 700;
       margin: 0 0 1rem;
       letter-spacing: -0.02em;
+      line-height: 1.15;
+      text-shadow: 0 10px 26px rgba(0,0,0,0.18);
     }
 
     .page-hero-subtitle {
       font-size: 1.1rem;
       opacity: 0.92;
-      max-width: 680px;
+      max-width: 760px;
       margin: 0 auto;
       line-height: 1.6;
+      text-shadow: 0 10px 22px rgba(0,0,0,0.16);
     }
 
     /* Breadcrumb */
     .breadcrumb {
-      padding: 1.5rem 0;
+      padding: 1.2rem 0;
       background: var(--gray-light);
       border-bottom: 1px solid var(--border-subtle);
     }
@@ -72,7 +111,7 @@
       display: flex;
       gap: 0.5rem;
       align-items: center;
-      font-size: 0.9rem;
+      font-size: 0.92rem;
       color: var(--gray-sophisticated);
       flex-wrap: wrap;
     }
@@ -81,6 +120,7 @@
       color: var(--navy-deep);
       text-decoration: none;
       transition: color 0.2s;
+      font-weight: 600;
     }
 
     .breadcrumb-nav a:hover {
@@ -91,33 +131,33 @@
     .resources-section {
       padding: 4rem 0;
     }
-
-    .resources-section:nth-child(even) {
+    .resources-section.alt {
       background: var(--gray-light);
     }
 
     .section-header {
       max-width: 800px;
       margin: 0 auto 2.5rem;
+      padding: 0 1.5rem;
     }
 
     .section-category {
       display: inline-block;
       font-size: 0.85rem;
-      font-weight: 600;
+      font-weight: 700;
       text-transform: uppercase;
       letter-spacing: 0.1em;
       color: var(--gold-accent);
       margin-bottom: 0.75rem;
       padding: 0.35rem 0.85rem;
       background: rgba(201,169,97,0.12);
-      border-radius: 4px;
+      border-radius: 999px;
     }
 
     .section-title {
       font-family: 'Montserrat', sans-serif;
       font-size: clamp(1.5rem, 4vw, 2rem);
-      font-weight: 700;
+      font-weight: 800;
       color: var(--navy-deep);
       margin: 0 0 0.75rem;
       letter-spacing: -0.01em;
@@ -137,6 +177,7 @@
       gap: 1.5rem;
       max-width: 1200px;
       margin: 0 auto;
+      padding: 0 1.5rem;
     }
 
     /* Tarjetas de recurso */
@@ -171,7 +212,7 @@
     .resource-icon {
       width: 48px;
       height: 48px;
-      border-radius: 8px;
+      border-radius: 12px;
       background: rgba(201,169,97,0.12);
       border: 1px solid rgba(201,169,97,0.2);
       display: flex;
@@ -184,7 +225,7 @@
     .resource-title {
       font-family: 'Montserrat', sans-serif;
       font-size: 1.2rem;
-      font-weight: 600;
+      font-weight: 800;
       color: var(--navy-deep);
       margin: 0 0 1rem;
     }
@@ -218,7 +259,7 @@
     .link-list a {
       text-decoration: none;
       color: var(--navy-deep);
-      font-weight: 500;
+      font-weight: 600;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -229,14 +270,15 @@
 
     .link-list a:hover {
       color: var(--gold-accent);
-      padding-left: 0.5rem;
+      padding-left: 0.4rem;
     }
 
     .link-label {
       font-size: 0.85rem;
       color: var(--gray-sophisticated);
-      font-weight: 400;
+      font-weight: 500;
       white-space: nowrap;
+      opacity: 0.9;
     }
 
     /* Tarjetas de noticias */
@@ -246,6 +288,7 @@
       gap: 1.5rem;
       max-width: 1200px;
       margin: 2rem auto 0;
+      padding: 0 1.5rem;
     }
 
     .news-card {
@@ -273,7 +316,7 @@
     .news-title {
       font-family: 'Montserrat', sans-serif;
       font-size: 1.1rem;
-      font-weight: 600;
+      font-weight: 800;
       margin: 0;
     }
 
@@ -282,15 +325,16 @@
       background: var(--navy-deep);
       color: #fff;
       padding: 2.5rem;
-      border-radius: 2px;
+      border-radius: 12px;
       margin: 0 auto;
       max-width: 1200px;
+      box-shadow: 0 12px 28px rgba(15,42,68,0.16);
     }
 
     .indicators-banner h3 {
       font-family: 'Montserrat', sans-serif;
-      font-size: 1.4rem;
-      font-weight: 700;
+      font-size: 1.35rem;
+      font-weight: 800;
       margin: 0 0 1.5rem;
       text-align: center;
     }
@@ -305,27 +349,27 @@
       text-align: center;
       padding: 1rem;
       background: rgba(255,255,255,0.08);
-      border-radius: 2px;
+      border-radius: 12px;
       border: 1px solid rgba(255,255,255,0.12);
     }
 
     .indicator-label {
       font-size: 0.9rem;
-      opacity: 0.85;
+      opacity: 0.9;
       margin-bottom: 0.5rem;
       text-transform: uppercase;
       letter-spacing: 0.05em;
-      font-weight: 600;
+      font-weight: 800;
     }
 
     .indicator-link {
       color: var(--gold-accent);
       text-decoration: none;
-      font-weight: 600;
+      font-weight: 800;
       transition: opacity 0.2s;
     }
 
-    .indicator-link:hover { opacity: 0.8; }
+    .indicator-link:hover { opacity: 0.85; }
 
     /* Footer */
     .footer {
@@ -349,18 +393,13 @@
       color: #fff;
       font-family: 'Montserrat', sans-serif;
       font-size: 1rem;
-      font-weight: 600;
+      font-weight: 800;
       margin: 0 0 1rem;
       letter-spacing: 0.05em;
       text-transform: uppercase;
     }
 
-    .footer-links {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
+    .footer-links { list-style: none; padding: 0; margin: 0; }
     .footer-links li { margin-bottom: 0.5rem; }
 
     .footer-links a {
@@ -368,7 +407,6 @@
       text-decoration: none;
       transition: color 0.2s;
     }
-
     .footer-links a:hover { color: var(--gold-accent); }
 
     .footer-bottom {
@@ -380,7 +418,7 @@
 
     /* Responsive */
     @media (max-width: 768px) {
-      .page-hero { padding: 3rem 0 2rem; }
+      .page-hero { padding: calc(3rem + 95px) 0 2rem; }
       .resources-section { padding: 3rem 0; }
       .resources-grid { grid-template-columns: 1fr; }
       .news-grid { grid-template-columns: 1fr; }
@@ -393,10 +431,10 @@
 
 <body>
 
-<header class="header">
+<header class="header header--light">
   <div class="container header-inner">
     <a href="index.html" class="logo" aria-label="Inicio">
-      <img src="Logo.jpeg" alt="GG Contabilidad y Defensa Fiscal" style="height: 48px;">
+      <img src="Logo.jpeg" alt="GG Contabilidad y Defensa Fiscal" style="height: 52px; width:auto;">
     </a>
 
     <button id="hamburger" class="hamburger" aria-label="Menú">Menú</button>
@@ -416,7 +454,9 @@
 <section class="page-hero">
   <div class="container">
     <h1>Recursos y enlaces oficiales</h1>
-    <p class="page-hero-subtitle">Acceso directo a portales institucionales, indicadores financieros y fuentes de información del sector fiscal y contable.</p>
+    <p class="page-hero-subtitle">
+      Acceso directo a portales institucionales, indicadores financieros y fuentes de información del sector fiscal y contable.
+    </p>
   </div>
 </section>
 
@@ -458,7 +498,7 @@
 </section>
 
 <!-- Portales oficiales fiscales -->
-<section class="resources-section">
+<section class="resources-section alt">
   <div class="container">
     <div class="section-header">
       <span class="section-category">Autoridades fiscales</span>
@@ -481,10 +521,10 @@
       <div class="resource-card">
         <div class="resource-icon">⚖️</div>
         <h3 class="resource-title">Defensa del contribuyente</h3>
-        <p class="resource-description">Procuraduría de la Defensa del Contribuyente y recursos legales.</p>
+        <p class="resource-description">PRODECON y rutas institucionales para defensa administrativa.</p>
         <ul class="link-list">
           <li><a href="https://www.prodecon.gob.mx/" target="_blank" rel="noopener">PRODECON <span class="link-label">prodecon.gob.mx</span></a></li>
-          <li><a href="https://www.tfja.gob.mx/" target="_blank" rel="noopener">Tribunal Federal de Justicia Administrativa <span class="link-label">TFJA</span></a></li>
+          <li><a href="https://www.tfja.gob.mx/" target="_blank" rel="noopener">TFJA <span class="link-label">Juicio contencioso</span></a></li>
         </ul>
       </div>
 
@@ -494,7 +534,7 @@
         <p class="resource-description">Diario Oficial y legislación federal vigente.</p>
         <ul class="link-list">
           <li><a href="https://www.dof.gob.mx/" target="_blank" rel="noopener">Diario Oficial de la Federación <span class="link-label">DOF</span></a></li>
-          <li><a href="https://www.diputados.gob.mx/LeyesBiblio/index.htm" target="_blank" rel="noopener">Leyes Federales <span class="link-label">Cámara de Diputados</span></a></li>
+          <li><a href="https://www.diputados.gob.mx/LeyesBiblio/index.htm" target="_blank" rel="noopener">Leyes Federales <span class="link-label">Diputados</span></a></li>
         </ul>
       </div>
     </div>
@@ -513,12 +553,12 @@
     <div class="resources-grid">
       <div class="resource-card">
         <div class="resource-icon">🏥</div>
-        <h3 class="resource-title">Instituto Mexicano del Seguro Social</h3>
+        <h3 class="resource-title">IMSS</h3>
         <p class="resource-description">IDSE, consulta de cédulas y trámites patronales.</p>
         <ul class="link-list">
-          <li><a href="https://www.imss.gob.mx/patrones/idse" target="_blank" rel="noopener">IDSE (IMSS desde su empresa) <span class="link-label">Movimientos</span></a></li>
-          <li><a href="https://sipare.imss.gob.mx/" target="_blank" rel="noopener">SIPARE <span class="link-label">Pagos en línea</span></a></li>
-          <li><a href="https://www.imss.gob.mx/" target="_blank" rel="noopener">Portal principal IMSS <span class="link-label">imss.gob.mx</span></a></li>
+          <li><a href="https://www.imss.gob.mx/patrones/idse" target="_blank" rel="noopener">IDSE <span class="link-label">Movimientos</span></a></li>
+          <li><a href="https://sipare.imss.gob.mx/" target="_blank" rel="noopener">SIPARE <span class="link-label">Pagos</span></a></li>
+          <li><a href="https://www.imss.gob.mx/" target="_blank" rel="noopener">Portal IMSS <span class="link-label">imss.gob.mx</span></a></li>
         </ul>
       </div>
 
@@ -534,24 +574,24 @@
 
       <div class="resource-card">
         <div class="resource-icon">💼</div>
-        <h3 class="resource-title">Secretaría del Trabajo</h3>
-        <p class="resource-description">Normatividad laboral y trámites ante STPS.</p>
+        <h3 class="resource-title">STPS / PROFEDET</h3>
+        <p class="resource-description">Normatividad laboral y defensa del trabajador.</p>
         <ul class="link-list">
-          <li><a href="https://www.gob.mx/stps" target="_blank" rel="noopener">Portal STPS <span class="link-label">gob.mx/stps</span></a></li>
-          <li><a href="https://www.gob.mx/profedet" target="_blank" rel="noopener">PROFEDET <span class="link-label">Defensa laboral</span></a></li>
+          <li><a href="https://www.gob.mx/stps" target="_blank" rel="noopener">STPS <span class="link-label">gob.mx</span></a></li>
+          <li><a href="https://www.gob.mx/profedet" target="_blank" rel="noopener">PROFEDET <span class="link-label">Defensa</span></a></li>
         </ul>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Gobierno estatal (traído de tu original) -->
-<section class="resources-section">
+<!-- Gobierno estatal -->
+<section class="resources-section alt">
   <div class="container">
     <div class="section-header">
       <span class="section-category">Gobierno estatal</span>
       <h2 class="section-title">Trámites y portales locales</h2>
-      <p class="section-description">Accesos directos a servicios estatales. Puedes reemplazar los enlaces “#” por los oficiales cuando los tengas.</p>
+      <p class="section-description">Accesos directos a servicios estatales. Reemplaza “#” por enlaces oficiales cuando los tengas.</p>
     </div>
 
     <div class="resources-grid">
