--- a/Indicadores.html
+++ b/Indicadores.html
@@ -219,9 +219,9 @@
       <a href="servicios.html">Servicios</a>
       <a href="Indicadores.html" aria-current="page">Indicadores</a>
       <a href="inpc.html">INPC</a>
-      <a href="enlaces.html">Sitios de Interés</a>
+      <a href="enlaces.html">Recursos</a>
       <a href="Blog.html">Blog</a>
-      <a href="nosotros.html">Quiénes somos</a>
+      <a href="nosotros.html">Nosotros</a>
       <a href="contacto.html" class="btn-nav">Contacto</a>
     </nav>
   </div>
@@ -587,3 +587,4 @@
 </script>
 </body>
 </html>
+
