--- a/contacto.html
+++ b/contacto.html
@@ -26,9 +26,9 @@
       <a href="servicios.html">Servicios</a>
       <a href="indicadores.html" aria-current="page">Indicadores</a>
       <a href="inpc.html">INPC</a>
-      <a href="enlaces.html">Sitios de Interés</a>
+      <a href="enlaces.html">Recursos</a>
       <a href="Blog.html">Blog</a>
-      <a href="nosotros.html">Quiénes somos</a>
+      <a href="nosotros.html">Nosotros</a>
       <a href="contacto.html" class="btn-nav">Contacto</a>
     </nav>
   </div>
@@ -75,3 +75,4 @@
 </script>
 </body>
 </html>
+
